# Barbervisor

./: .gitignore  LICENSE  README.md  README.md~  snapshot.sh
bootloader/: build.rs  stage0.asm
bootloader/src/: asm_routines.asm  main.rs  mm.rs  pxe.rs
check_address/: Cargo.toml  README.md
check_address/src/: main.rs  memreader.rs  windows.rs
check_address/versions/: win10.system32
corpgen/: Cargo.toml  README.md
corpgen/src/: main.rs
coverage/: Cargo.toml  README.md  coverage.gnuplot
coverage/src/: main.rs  memreader.rs  windows.rs
diverge/: Cargo.toml  README.md
diverge/src/: main.rs
emu/: bochsrc  boot.ipxe
find_input/: Cargo.toml  README.md
find_input/src/: main.rs
kernel/: Cargo.toml
kernel/.cargo/: config
kernel/src/: acpi.rs  corpus.rs  coverage.rs  ept.rs  file.rs  fuzzvm.rs  idt.rs  interrupts.rs  main.rs  mm.rs  msr.rs  msr_bitmap.rs  mutations.rs  ni.rs  panic.rs  pci.rs  rng.rs  stats.rs  time.rs  tools.rs  trace.rs  vga_buffer.rs  vmregs.rs  vmx.rs  vmxflags.rs  volatile.rs
kernel/src/fuzzers/: example.rs  leadtools_ani.rs  mod.rs
kernel/src/net/: i219.rs  mod.rs
kernel/src/vmexit/: descriptor_table.rs  mod.rs
parse_trace/: Cargo.toml  README.md
parse_trace/src/: main.rs  memreader.rs
pci-ids-parser/: Cargo.toml  README.md  pciids
pci-ids-parser/src/: main.rs
shared/cpu/src/: lib.rs
shared/mmu/src/: lib.rs
shared/noodle/: serialize_tuple_gen.py  tuple_match_gen.py
shared/noodle/src/: lib.rs  tuple_gen.rs  tuple_match.rs
shared/packets/: Cargo.toml  README.md
shared/packets/src/: ethernet.rs  ip.rs  ipv4.rs  lib.rs  macros.rs  phy.rs  tftp.rs  udp.rs  wire.rs
shared/rangeset/src/: lib.rs
shared/safecast/src/: lib.rs
shared/serial/src/: lib.rs
shared/vmx/: Cargo.toml
shared/vmx/src/: lib.rs  msr.rs  vmxflags.rs
snapshot/: Cargo.toml  README.md
snapshot/src/: main.rs
src/: main.rs
tftp-server/: Cargo.toml  README.md
tftp-server/src/: coverage.rs  main.rs
