[package]
name = "parse_trace"
version = "0.1.0"
authors = ["randomlshb@gmail.com <randomlshb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "0.6.0"
bitflags = "1.2.1"
pdb = "0.5.0"
noodle = { path = "../shared/noodle" }
